--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,8 @@
 <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/youtube-video-link?autoplay=1"
+    src="https://www.youtube.com/embed/youtube-video-link?autoplay=0"
     title="YouTube video player" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe><br>
-cpop-name
+upload-date<br>
+artist-name<br>
+cpop-name<br>
