--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,4 @@
+<h1>changpop.party</h1>
 <iframe width="560" height="315"
     src="https://www.youtube.com/embed/youtube-video-link?autoplay=0"
     title="YouTube video player" frameborder="0"
@@ -7,5 +8,5 @@ upload-date<br>
 artist-name<br>
 cpop-name<br>
 <br>
-창팝목록 240619까지 정상화 완료<br>
+창팝목록 240716까지 정상화 완료<br>
 누락된 창팝 문의는 partyhost@changpop.party(개사곡, 목사곡도 받습니다.)
