--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,4 @@
+<meta name="google-adsense-account" content="ca-pub-5575745220460758">
 <h1>changpop.party</h1>
 <h2>창팝모음 사이트</h2>
 <div class="player">
