유스컵이름 락장르로 변경

--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -6,5 +6,5 @@
 <a href="https://www.piku.co.kr/w/2VMHES">목사(창드컵 진행한 스트리머) 직작창팝 올인원</a><br>
 <a href="https://www.piku.co.kr/w/9lGqmR">목사(창드컵 진행한 스트리머) 직작창팝 시즌1</a><br>
 <a href="https://www.piku.co.kr/w/aBzDBc">목사(창드컵 진행한 스트리머) 직작창팝 시즌2</a><br>
-<a href="https://www.piku.co.kr/w/5eQlnd">창작곡 유스컵(조회수 5만제한)</a><br>
+<a href="https://www.piku.co.kr/w/5eQlnd">락장르 창팝</a><br>
 <a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한)</a><br>
