--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -1,10 +1,12 @@
 <a href="https://www.piku.co.kr/w/8uVWvb">엄선작 시즌1</a><br>
 <a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 시즌2</a><br>
 <a href="https://www.piku.co.kr/w/7WAT6S">엄선작 시즌3</a><br>
+<a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4 (공사중)</a><br>
 <a href="https://www.piku.co.kr/w/1AXQZi">개사곡 메인스트림</a><br>
 <a href="https://www.piku.co.kr/w/5IGwDP">개사곡 서브컬쳐</a><br>
 <a href="https://www.piku.co.kr/w/2VMHES">목사(창드컵 진행한 스트리머) 직작창팝 올인원</a><br>
 <a href="https://www.piku.co.kr/w/9lGqmR">목사(창드컵 진행한 스트리머) 직작창팝 시즌1</a><br>
 <a href="https://www.piku.co.kr/w/aBzDBc">목사(창드컵 진행한 스트리머) 직작창팝 시즌2</a><br>
-<a href="https://www.piku.co.kr/w/5eQlnd">락장르 창팝</a><br>
-<a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한)</a><br>
+<a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a><br>
+<a href="https://www.piku.co.kr/w/81RJ4R">마이너컵(유스컵 포지션)</a><br>
+<a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 64강)</a><br>
