창드컵 리스트 목록 가독성 개선

--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -1,13 +1,30 @@
-<a href="https://www.piku.co.kr/w/8uVWvb">엄선작 시즌1</a><br>
-<a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 시즌2</a><br>
-<a href="https://www.piku.co.kr/w/7WAT6S">엄선작 시즌3</a><br>
-<a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4 (공사중)</a><br>
-<a href="https://www.piku.co.kr/w/1AXQZi">개사곡 메인스트림</a><br>
-<a href="https://www.piku.co.kr/w/5IGwDP">개사곡 서브컬쳐</a><br>
-<a href="https://www.piku.co.kr/w/2VMHES">목사(창드컵 진행한 스트리머) 직작창팝 올인원</a><br>
-<a href="https://www.piku.co.kr/w/9lGqmR">목사(창드컵 진행한 스트리머) 직작창팝 시즌1</a><br>
-<a href="https://www.piku.co.kr/w/aBzDBc">목사(창드컵 진행한 스트리머) 직작창팝 시즌2</a><br>
-<a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a><br>
-<a href="https://www.piku.co.kr/w/81RJ4R">마이너컵(유스컵 포지션)</a><br>
-<a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 64강)</a><br>
-<a href="https://www.piku.co.kr/w/9EEXQj">창작곡 올스타컵(9월 3일까지의 모든곡 + 이후 일부곡, 현재 총 430곡)</a><br>
+엄선작 시리즈<ul>
+<li><a href="https://www.piku.co.kr/w/8uVWvb">엄선작 시즌1</a><br></li>
+<li><a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 시즌2</a><br></li>
+<li><a href="https://www.piku.co.kr/w/7WAT6S">엄선작 시즌3</a><br></li>
+<li><a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4 (공사중)</a><br></li>
+</ul>
+<br>
+개사곡 시리즈<ul>
+<li><a href="https://www.piku.co.kr/w/1AXQZi">개사곡 메인스트림</a><br></li>
+<li><a href="https://www.piku.co.kr/w/5IGwDP">개사곡 서브컬쳐</a><br></li>
+</ul>
+<br>
+목사직작 창팝<ul>
+<li><a href="https://www.piku.co.kr/w/2VMHES">목사(창드컵 진행한 스트리머) 직작창팝 올인원</a></li>
+<li><a href="https://www.piku.co.kr/w/9lGqmR">목사(창드컵 진행한 스트리머) 직작창팝 시즌1</a></li>
+<li><a href="https://www.piku.co.kr/w/aBzDBc">목사(창드컵 진행한 스트리머) 직작창팝 시즌2</a></li>
+</ul>
+<br>
+
+
+<br>
+창팝 발굴 시리즈<ul>
+<li><a href="https://www.piku.co.kr/w/81RJ4R">마이너컵(유스컵 포지션)</a></li>
+<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 64강)</a></li></ul><br>
+장르별 창팝<ul>
+    <li><a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a></li>
+</ul><br>
+모든곡 모아놓기
+<ul><li>
+<a href="https://www.piku.co.kr/w/9EEXQj">창작곡 올스타컵(9월 3일까지의 모든곡 + 이후 일부곡, 현재 총 430곡)</a></li></ul><br>
