개사곡 목록 페이지 추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,7 @@
         <tr>
             <td><a href="/">메인</a></td>
             <td><a href="/list">창팝목록</a></td>
+            <td><a href="/kesa_list">개사곡 목록</a></td>
             <td><a href="/changdcup">창드컵목록</a></td>
         </tr>
     </table>
