--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,7 @@
             <td><a href="/list">창팝목록</a></td>
             <td><a href="/kesa_list">개사곡 목록</a></td>
             <td><a href="/changdcup">창드컵목록</a></td>
+            <td><a href="/prompt">프롬프트 모음</a></td>
         </tr>
     </table>
 </div>
