--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
             <td><a href="/kesa_list">개사곡 목록</a></td>
             <td><a href="/changdcup">창드컵목록</a></td>
             <td><a href="/prompt">프롬프트 모음</a></td>
+            <td><a href="https://github.com/sa4gu9/changpop.party">깃허브</a></td>
         </tr>
     </table>
 </div>
