--- a/templates/random.html
+++ b/templates/random.html
@@ -9,4 +9,6 @@ artist-name<br>
 cpop-name<br>
 <br>
 창팝목록 240910까지 정상화 완료<br>
-누락된 창팝 문의는 partyhost@changpop.party(개사곡, 목사곡도 받습니다.)
+<br>
+애드가드를 사용중이시라면 광고차단을 해제해주세요.<br>
+이 사이트의 수익은 창팝을 위해 사용됩니다.
