--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,6 @@
 <h1>changpop.party</h1>
 <h2>창팝모음 사이트</h2>
+<meta http-equiv="Cache-Control" content="no-cache" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5575745220460758"
     crossorigin="anonymous"></script>
 <div class="menu">
