복수정답 경우의 수 추가

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,4 +1,4 @@
 <form action="quiz" method="post">
     <textarea name="text" rows="1" cols="50"></textarea>
-    <input type="submit" value="수정">
+    <input type="submit" value="제출">
 </form>
