--- a/templates/random.html
+++ b/templates/random.html
@@ -10,5 +10,7 @@ cpop-name<br>
 <br>
 창팝목록 240910까지 정상화 완료<br>
 <br>
+누락곡 문의 - partyhost@changpop.party<br>
+<br>
 애드가드를 사용중이시라면 광고차단을 해제해주세요.<br>
 이 사이트의 수익은 창팝을 위해 사용됩니다.
