--- a/templates/prompt.html
+++ b/templates/prompt.html
@@ -1,4 +1,15 @@
 <script src="/static/prompt.js"></script>
+<a href="https://docs.google.com/spreadsheets/d/19NBx3lxhJiD0NZ3j5ydYm4ic5TWgCo6Qs45JqHyHWtA/edit?gid=0#gid=0">다른분이 운영중이신 프롬프트 모음 시트</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <button id="창팝딸깍딸깍캬" onclick="btnClick(this.id)">창팝딸깍딸깍캬</button>
 <ul>
     <div name="창팝딸깍딸깍캬_div">
