--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,3 +1,29 @@
+<br>
+<br>
+<br>
+<a href="https://machugi.io/search?sortType=BEST&keyword=%EC%B0%BD%ED%8C%9D+%EB%A6%AC%EB%89%B4%EC%96%BC">다른분이 운영중이신 맞추기아이오 창팝맞추기</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <form action="quiz" method="post">
     <textarea name="text" rows="1" cols="50"></textarea>
     <input type="submit" value="제출">
