--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -2,7 +2,8 @@
 <li><a href="https://www.piku.co.kr/w/8uVWvb">엄선작 시즌1</a><br></li>
 <li><a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 시즌2</a><br></li>
 <li><a href="https://www.piku.co.kr/w/7WAT6S">엄선작 시즌3</a><br></li>
-<li><a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4 (공사중)</a><br></li>
+<li><a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4</a><br></li>
+<li><a href="https://www.piku.co.kr/w/81RJ4R">엄선작 도파민컵</a></li>
 </ul>
 <br>
 개사곡 시리즈<ul>
@@ -20,8 +21,7 @@
 
 <br>
 창팝 발굴 시리즈<ul>
-<li><a href="https://www.piku.co.kr/w/81RJ4R">마이너컵(유스컵 포지션)</a></li>
-<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 64강)</a></li></ul><br>
+<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li></ul><br>
 장르별 창팝<ul>
     <li><a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a></li>
 </ul><br>
