--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -1,8 +1,9 @@
 엄선작 시리즈<ul>
-<li><a href="https://www.piku.co.kr/w/8uVWvb">엄선작 시즌1</a><br></li>
-<li><a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 시즌2</a><br></li>
-<li><a href="https://www.piku.co.kr/w/7WAT6S">엄선작 시즌3</a><br></li>
-<li><a href="https://www.piku.co.kr/w/7QKFbB">엄선작 시즌4</a><br></li>
+<li><a href="https://www.piku.co.kr/w/8uVWvb">엄선작 1편</a><br></li>
+<li><a href="https://www.piku.co.kr/w/2SQfBZ">엄선작 2편</a><br></li>
+<li><a href="https://www.piku.co.kr/w/7WAT6S">엄선작 3편</a><br></li>
+<li><a href="https://www.piku.co.kr/w/7QKFbB">엄선작 4편</a><br></li>
+<li><a href="https://www.piku.co.kr/w/5AI0oQ">엄선작 5편</a><br></li>
 <li><a href="https://www.piku.co.kr/w/81RJ4R">엄선작 도파민컵</a></li>
 </ul>
 <br>
@@ -22,6 +23,9 @@
 <br>
 창팝 발굴 시리즈<ul>
 <li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li></ul><br>
+<li><a href="https://www.piku.co.kr/w/66gTd7">유스유스 졸업컵 1편</a></li>
+<li><a href="https://www.piku.co.kr/w/axzsbx">유스유스 졸업컵 2편(공사중)</a></li>
+</ul><br>
 장르별 창팝<ul>
     <li><a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a></li>
 </ul><br>
