창팝 대회모음 추가

--- a/templates/prompt.html
+++ b/templates/prompt.html
@@ -1,6 +1,6 @@
 <script src="/static/prompt.js"></script>
 <br>
-<br>
+프롬프트 제보 받습니다 partyhost@changpop.party<br>
 <br>
 <a href="https://docs.google.com/spreadsheets/d/19NBx3lxhJiD0NZ3j5ydYm4ic5TWgCo6Qs45JqHyHWtA/edit?gid=0#gid=0">다른분이 운영중이신 프롬프트 모음 시트</a>
 <br>
