--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,7 +1,25 @@
 <br>
 <br>
 <br>
-<a href="https://machugi.io/search?sortType=BEST&keyword=%EC%B0%BD%ED%8C%9D+%EB%A6%AC%EB%89%B4%EC%96%BC">다른분이 운영중이신 맞추기아이오 창팝맞추기</a>
+맞추기 아이오
+<ul>
+    <li><a href="https://machugi.io/quiz/qSqXXYPxHAGhEbI5welC">엄선작 1~2편</a></li>
+    <li><a href="https://machugi.io/quiz/CmpCaFrQabY66TFfVarr">엄선작 3~4편</a></li>
+    <li><a href="https://machugi.io/quiz/POuzAxxSvjG57RkCqMAY">엄선작 출신/인디 포함</a></li>
+    <li><a href="https://machugi.io/quiz/FACuWnSxkve2mx9GOgma">유스유스컵 모든 수록곡</a></li>
+</ul>
+스타크래프트 유즈맵<br>
+<ul>
+    <li>유스유스컵 모든 수록곡 맞추기</li>
+    <ul>
+        <li><a href="https://www.dropbox.com/scl/fi/z4j7qjn308ggw6m339wt9/250109.scx?rlkey=uv9dhorhx76nxuoxcavginx0g&st=g353v59v&dl=0"></a>250109 버전</li>
+        <li><a
+                href="https://www.dropbox.com/scl/fi/2w7n7p99je4fny3muumuj/250117_2.scx?rlkey=84b8yhhzlpcolb1rhdmp2lqs6&st=v5t7m36h&dl=0"></a>250117
+            버전</li>
+    </ul>
+</ul>
+<a href="https://machugi.io/search?sortType=BEST&keyword=%EC%B0%BD%ED%8C%9D+%EB%A6%AC%EB%89%B4%EC%96%BC">다른분이 운영중이신 맞추기아이오 창팝맞추기</a><br>
+
 <br>
 <br>
 <br>
