--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -22,7 +22,7 @@
 
 <br>
 창팝 발굴 시리즈<ul>
-<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li></ul><br>
+<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li><br>
 <li><a href="https://www.piku.co.kr/w/66gTd7">유스유스 졸업컵 1편</a></li>
 <li><a href="https://www.piku.co.kr/w/axzsbx">유스유스 졸업컵 2편(공사중)</a></li>
 </ul><br>
