--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -15,10 +15,10 @@
         <li><a href="https://www.dropbox.com/scl/fi/z4j7qjn308ggw6m339wt9/250109.scx?rlkey=uv9dhorhx76nxuoxcavginx0g&st=g353v59v&dl=0">250109 버전</a></li>
         <li><a
                 href="https://www.dropbox.com/scl/fi/2w7n7p99je4fny3muumuj/250117_2.scx?rlkey=84b8yhhzlpcolb1rhdmp2lqs6&st=v5t7m36h&dl=0">250117 버전</a></li>
+        <li><a
+                href="https://www.dropbox.com/scl/fi/d42vlm0yj9ewdzxl9ordj/250122.scx?rlkey=2fcs140ln8e895f6jc11pio1s&st=lwi8xrr7&dl=0">250122 버전</a></li>
     </ul>
 </ul>
-<a href="https://machugi.io/search?sortType=BEST&keyword=%EC%B0%BD%ED%8C%9D+%EB%A6%AC%EB%89%B4%EC%96%BC">다른분이 운영중이신 맞추기아이오 창팝맞추기</a><br>
-
 <br>
 <br>
 <br>
