인창페, 창드컵 추가

--- a/templates/changdcup.html
+++ b/templates/changdcup.html
@@ -10,6 +10,7 @@
 개사곡 시리즈<ul>
 <li><a href="https://www.piku.co.kr/w/1AXQZi">개사곡 메인스트림</a><br></li>
 <li><a href="https://www.piku.co.kr/w/5IGwDP">개사곡 서브컬쳐</a><br></li>
+<li><a href="https://www.piku.co.kr/w/3CQDB7">개사곡 야구 응원가</a><br></li>
 </ul>
 <br>
 목사직작 창팝<ul>
@@ -18,17 +19,14 @@
 <li><a href="https://www.piku.co.kr/w/aBzDBc">목사(창드컵 진행한 스트리머) 직작창팝 시즌2</a></li>
 </ul>
 <br>
-
-
 <br>
 창팝 발굴 시리즈<ul>
-<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li><br>
+<li><a href="https://www.piku.co.kr/w/2PDF01">창작곡 유스유스컵(조회수 1천제한, 140+)</a></li>
 <li><a href="https://www.piku.co.kr/w/66gTd7">유스유스 졸업컵 1편</a></li>
 <li><a href="https://www.piku.co.kr/w/axzsbx">유스유스 졸업컵 2편(공사중)</a></li>
 </ul><br>
 장르별 창팝<ul>
     <li><a href="https://www.piku.co.kr/w/4PXuL6">힙합장르 창팝</a></li>
+    <li><a href="https://www.piku.co.kr/w/5SMkVy">감성컵 개화(1편)</a></li>
+    <li><a href="https://www.piku.co.kr/w/1jviES">감성컵 월영(2편)</a></li>
 </ul><br>
-모든곡 모아놓기
-<ul><li>
-<a href="https://www.piku.co.kr/w/9EEXQj">창작곡 올스타컵(9월 10일까지의 모든곡 + 이후 일부곡, 현재 총 479곡)</a></li></ul><br>
