--- a/templates/contest.html
+++ b/templates/contest.html
@@ -1,3 +1,4 @@
 <a href="https://www.youtube.com/watch?v=CrAWLnVoxxs">복면창팝 1</a><br>
+<a href="https://www.youtube.com/watch?v=P42ET8qvxpY">인디 창팝 페스티벌(개사곡 포함)</a><br>
 <a href="https://www.youtube.com/watch?v=SB85zairvIk">복면창팝 2</a><br>
 <a href="https://www.youtube.com/playlist?list=PLpIhofAh1LMV9E2Xly5b50UbE0WVfjqwj">네 태그 쩔더라</a><br>
