유스유스컵 맞추기 유즈맵 250209 추가

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -17,6 +17,8 @@
                 href="https://www.dropbox.com/scl/fi/2w7n7p99je4fny3muumuj/250117_2.scx?rlkey=84b8yhhzlpcolb1rhdmp2lqs6&st=v5t7m36h&dl=0">250117 버전</a></li>
         <li><a
                 href="https://www.dropbox.com/scl/fi/d42vlm0yj9ewdzxl9ordj/250122.scx?rlkey=2fcs140ln8e895f6jc11pio1s&st=lwi8xrr7&dl=0">250122 버전</a></li>
+        <li><a
+                href="https://www.dropbox.com/scl/fi/ziawqonqgc8ggzwnixfox/250209.scx?rlkey=644wrmx7usp0xef5ew5qzu6bu&st=cybqypwf&dl=0">250209 버전</a></li>
     </ul>
 </ul>
 <br>
