유스컵 조회수 섹션 추가

--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,8 @@
             <td><a href="/quiz">창팝 맞추기</a></td>
             <td><a href="/prompt">프롬프트 모음</a></td>
             <td><a href="/recommand">오늘의 추천곡 모음</a></td>
-            <td><a href="/contest">창팝 대회 모음</a></td>
+            <td><a href="/contest">창팝 대회 모음</a></td><td><a href="/youth_status">유스 어셈블컵 조회수 확인</a></td>
+            
         </tr>
     </table>
 </div>
