--- a/templates/youth_status.html
+++ b/templates/youth_status.html
@@ -1,3 +1,4 @@
-{{ remain_time }}뒤에 재로딩합니다<br>
+<script src="static/timer.js"></script>
+<div id="timer" style="display:inline;">{{ minutes }}:{{ seconds }}</div>뒤에 재로딩합니다<br>
 <br>
 <br>
