Refactor youth status to use API and update frontend
Introduces apicore.py to provide a Flask API for youth status and video views, replacing direct backend logic in main.py. Removes static/timer.js and adds static/youth_status.js for dynamic frontend updates via AJAX. Updates templates/youth_status.html to use the new JS and API, and modifies changdcupadd.py to simplify URL handling. Also adds a list of YouTube links to addinglist.txt.

--- a/templates/youth_status.html
+++ b/templates/youth_status.html
@@ -1,4 +1,7 @@
-<script src="static/timer.js"></script>
+<Script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></Script>
+<script src="/static/youth_status.js"></script>
 <div id="timer" style="display:inline;">{{ minutes }}:{{ seconds }}</div>뒤에 재로딩합니다<br>
+
+<div id="youth_view">empty</div>
 <br>
 <br>
